# glurep

./: .gitignore  Cargo.toml  README.md
crates/glurep/: Cargo.toml  README.md
crates/glurep-gui/: Cargo.toml  README.md
crates/glurep-gui/src/: main.rs  report.rs  ui.rs
crates/glurep-gui/src/ui/: palette.rs  widgets.rs
crates/glurep/src/: main.rs
crates/glurep/src/ui/: widgets.rs
crates/glurep_cli/: Cargo.toml
crates/glurep_cli/src/: main.rs
crates/glurep_core/: Cargo.toml  README.md
crates/glurep_core/src/: deserialize.rs  lib.rs  log.rs  pdf.rs  plot.rs
crates/glurep_core/src/log/: error.rs
crates/glurep_gui/: Cargo.toml
crates/glurep_gui/src/: main.rs  report.rs  ui.rs  utils.rs
scripts/: pdf.sh
src/: deserialize.rs  log.rs  main.rs  pdf.rs  plot.rs  utils.rs
src/log/: error.rs
