[package]
name = "glurep"
version.workspace = true
edition.workspace = true
license.workspace = true
categories = ["gui", "science::bioinformatics", "visualization"]
description = "GUI utility for generating pdf reports from glucose readings in supported csv formats."
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
