[package]
name = "glurep_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
categories = ["command-line-utilities", "science::bioinformatics", "visualization"]
description = "CLI utility for generating pdf reports from glucose readings in supported csv formats."
authors.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "glurep-cli"
path = "src/main.rs"

[dependencies]
glurep_core = { workspace = true, features = ["cli"] }

anyhow = { workspace = true }
clap = { workspace = true }
