[package]
name = "glurep_core"
version.workspace = true
edition.workspace = true
license.workspace = true
categories = ["science::bioinformatics", "visualization"]
description = "Core library for generating pdf reports from glucose readings in supported csv formats."
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
csv = { workspace = true }
itertools = { workspace = true }
jiff = { workspace = true }
plotters = { workspace = true }
printpdf = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
cli = ["dep:clap"]
