[package]
name = "glurep_gui"
version.workspace = true
edition.workspace = true
license.workspace = true
categories = ["gui", "science::bioinformatics", "visualization"]
description = "GUI utility for generating pdf reports from glucose readings in supported csv formats."
authors.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "glurep-gui"
path = "src/main.rs"

[dependencies]
glurep_core = { workspace = true }

anyhow = { workspace = true }
winit = { workspace = true }

[target.'cfg(not(any(target_family = "wasm", target_os = "android", target_os = "ios")))'.dependencies]
rfd = { workspace = true }
xilem = { workspace = true }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
rfd = { workspace = true }
xilem_web = { workspace = true }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
xilem = { workspace = true }
